[gd_scene load_steps=6 format=1]

[ext_resource path="res://scenes/User_interface/User_interface.gd" type="Script" id=1]
[ext_resource path="res://scenes/User_interface/Menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/User_interface/OptionMenu.gd" type="Script" id=3]
[ext_resource path="res://res/Tileset/Tileset2/1.png" type="Texture" id=4]
[ext_resource path="res://res/Tileset/Tileset2/2.png" type="Texture" id=5]

[node name="User_interface" type="CanvasLayer"]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="PopupMenu" type="PopupMenu" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 20.0
popup/exclusive = false
items = [  ]
script/script = ExtResource( 2 )

[node name="OptionMenu" type="PanelContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 13.0
margin/top = 12.0
margin/right = 227.0
margin/bottom = 280.0
script/script = ExtResource( 3 )
__meta__ = { "_edit_group_":true }

[node name="CenterContainer" type="CenterContainer" parent="OptionMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 315.0
margin/bottom = 261.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="OptionMenu/CenterContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 308.0
margin/bottom = 254.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="OptionMenu/CenterContainer/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 308.0
margin/bottom = 20.0
alignment = 2

[node name="Button" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/HBoxContainer"]

rect/min_size = Vector2( 12, 12 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 289.0
margin/top = 0.0
margin/right = 308.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "x"
flat = false

[node name="GridContainer" type="GridContainer" parent="OptionMenu/CenterContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 24.0
margin/right = 308.0
margin/bottom = 254.0
columns = 3

[node name="Button7" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 134.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = false

[node name="Button8" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 0.0
margin/right = 284.0
margin/bottom = 134.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="Button9" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 288.0
margin/top = 0.0
margin/right = 308.0
margin/bottom = 134.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button10" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 138.0
margin/right = 140.0
margin/bottom = 158.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button11" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 138.0
margin/right = 284.0
margin/bottom = 158.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button12" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 288.0
margin/top = 138.0
margin/right = 308.0
margin/bottom = 158.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button13" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 162.0
margin/right = 140.0
margin/bottom = 182.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button14" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 162.0
margin/right = 284.0
margin/bottom = 182.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button15" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 288.0
margin/top = 162.0
margin/right = 308.0
margin/bottom = 182.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button16" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 186.0
margin/right = 140.0
margin/bottom = 206.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button17" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 186.0
margin/right = 284.0
margin/bottom = 206.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button18" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 288.0
margin/top = 186.0
margin/right = 308.0
margin/bottom = 206.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button19" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 210.0
margin/right = 140.0
margin/bottom = 230.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button20" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 210.0
margin/right = 284.0
margin/bottom = 230.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button21" type="Button" parent="OptionMenu/CenterContainer/VBoxContainer/GridContainer"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 288.0
margin/top = 210.0
margin/right = 308.0
margin/bottom = 230.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="BottonPanel" type="PanelContainer" parent="."]

editor/display_folded = true
anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 59.0
margin/top = 47.0
margin/right = -59.0
margin/bottom = 5.0
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="HBoxContainer" type="HBoxContainer" parent="BottonPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 113.0
margin/bottom = 39.0
custom_constants/separation = 5
alignment = 0

[node name="Bulid_btt" type="Button" parent="BottonPanel/HBoxContainer"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Orders_btt" type="Button" parent="BottonPanel/HBoxContainer"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 0.0
margin/right = 69.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Stats_btt" type="Button" parent="BottonPanel/HBoxContainer"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 74.0
margin/top = 0.0
margin/right = 106.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 71.0
margin/top = 30.0
margin/right = 111.0
margin/bottom = 44.0
text = "aaaa"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="item_pressed" from="PopupMenu" to="." method="_on_PopupMenu_item_pressed"]

[connection signal="pressed" from="OptionMenu/CenterContainer/VBoxContainer/HBoxContainer/Button" to="OptionMenu" method="_on_Button_pressed"]

[connection signal="pressed" from="OptionMenu/CenterContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="OptionMenu/CenterContainer/VBoxContainer/GridContainer/Button7" to="." method="_on_Button7_pressed"]

[connection signal="pressed" from="OptionMenu/CenterContainer/VBoxContainer/GridContainer/Button8" to="." method="_on_Button8_pressed"]

[connection signal="pressed" from="BottonPanel/HBoxContainer/Bulid_btt" to="." method="_on_Bulid_btt_pressed"]

[connection signal="pressed" from="BottonPanel/HBoxContainer/Orders_btt" to="." method="_on_Orders_btt_pressed"]

[connection signal="pressed" from="BottonPanel/HBoxContainer/Stats_btt" to="." method="_on_Stats_btt_pressed"]


